--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
@@ -14,9 +16,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
+    "cloudinary-react": "^1.8.1",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.2.0",
     "react-s3": "^1.3.1",
